# aoc-2020

./: .gitignore  Cargo.toml
src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  lib.rs
